added hero image 2

--- a/assets/slider-style.css
+++ b/assets/slider-style.css
@@ -95,7 +95,7 @@ body {
 }
 .home {
 	height: 100vh;
-	background: url('images/background/travel-banner.png');
+	background: url('images/d49a911d87.jpg');
 	background-size: cover;
 	background-position:center;
 	background-attachment:fixed ;
@@ -159,7 +159,7 @@ body {
 
 
 .about {
-	background: url('images/background/corporate-travel-banner.png');
+	background: url('images/17f202371d.jpg');
 	background-size: cover;
 	background-position:center;
 	background-attachment:fixed ;
