--- a/assets/slider-style.css
+++ b/assets/slider-style.css
@@ -93,22 +93,38 @@ body {
 	-webkit-flex-grow: 10;
 	flex-grow:16;
 }
-.home {
+/* .home {
 	height: 100vh;
 	background: url('images/d49a911d87.jpg');
 	background-size: cover;
 	background-position:center;
 	background-attachment:fixed ;
+	@media screen and (min-width: 768px) {
+		animation: aboutFlexSlide $defaultSeconds 1;
+		animation-delay: 0s;
+	}
+} */
+
+.home {
+  position: relative; /* required for ::before positioning */
+  height: 100vh;
+  background: url('images/d49a911d87.jpg');
+  background-size: cover;
+  background-position: center;
+  background-attachment: fixed;
+  overflow: hidden; /* ensures pseudo-element stays contained */
 }
+
 .home::before {
   content: "";
   position: absolute;
   top: 0;
   left: 0;
   width: 100%;
-  height: 20%;
-  background: rgba(0, 0, 0, 0.45); /* black overlay with 45% opacity */
+  height: 100%;
+  background: rgba(0, 0, 0, 0.45); /* <-- overlay color + opacity */
   z-index: 1;
+  pointer-events: none; /* ensures overlay doesn't block buttons/links */
 }
 
 @keyframes aboutFlexSlide {
@@ -130,6 +146,8 @@ body {
 	@media screen and (min-width: 768px) {
 		transform: rotate(90deg);
 		top: 15%;
+		animation: aboutFlexSlide $defaultSeconds 1;
+		animation-delay: 0s;
 	}
 }
 
@@ -152,6 +170,10 @@ body {
 
 .flex-about-home {
 	opacity: 0;
+	@media screen and (min-width: 768px) {
+		animation: aboutFlexSlide $defaultSeconds 1;
+		animation-delay: 0s;
+	}
 }
 
 @keyframes flexAboutHome {
@@ -173,6 +195,17 @@ body {
 	background-size: cover;
 	background-position:center;
 	background-attachment:fixed ;
+}
+.about::before {
+  content: "";
+  position: absolute;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 100%;
+  background: rgba(0, 0, 0, 0.45); /* <-- overlay color + opacity */
+  z-index: 1;
+  pointer-events: none; /* ensures overlay doesn't block buttons/links */
 }
 .contact-form {
 	width: 100%;
@@ -302,7 +335,7 @@ a.btn-one.style2.tra {
 		display: none;
 	}
 	section.mobileslider {
-		height: 330px;
+		height: 288px;
 		background-size: contain;
 		position: relative;
 	}
