--- a/assets/css/module-css/breadcrumb-section.css
+++ b/assets/css/module-css/breadcrumb-section.css
@@ -25,13 +25,13 @@
     background-repeat: no-repeat;
     background-size: cover;
     z-index: 1;
-    box-shadow: inset 0 0 0 100vw rgb(0 0 0 / 71%) !important;
+    box-shadow: inset 0 0 0 100vw rgb(0 0 0 / 50%) !important;
 }
 
 .breadcrumb-area .inner-content {
     position: relative;
     display: block;
-    padding: 239px 0 104px;
+    padding: 239px 0;
     text-align: center;
     z-index: 10;
 }
