--- a/assets/slider-style.css
+++ b/assets/slider-style.css
@@ -93,9 +93,9 @@ body {
 	-webkit-flex-grow: 10;
 	flex-grow:16;
 }
-/* .home {
+.home {
 	height: 100vh;
-	background: url('images/d49a911d87.jpg');
+	background: url('images/Untitled design(1).png');
 	background-size: cover;
 	background-position:center;
 	background-attachment:fixed ;
@@ -103,28 +103,6 @@ body {
 		animation: aboutFlexSlide $defaultSeconds 1;
 		animation-delay: 0s;
 	}
-} */
-
-.home {
-  position: relative; /* required for ::before positioning */
-  height: 100vh;
-  background: url('images/d49a911d87.jpg');
-  background-size: cover;
-  background-position: center;
-  background-attachment: fixed;
-  overflow: hidden; /* ensures pseudo-element stays contained */
-}
-
-.home::before {
-  content: "";
-  position: absolute;
-  top: 0;
-  left: 0;
-  width: 100%;
-  height: 100%;
-  background: rgba(0, 0, 0, 0.45); /* <-- overlay color + opacity */
-  z-index: 1;
-  pointer-events: none; /* ensures overlay doesn't block buttons/links */
 }
 
 @keyframes aboutFlexSlide {
@@ -191,21 +169,10 @@ body {
 
 
 .about {
-	background: url('images/17f202371d.jpg');
+	background: url('images/Untitled design.png');
 	background-size: cover;
 	background-position:center;
 	background-attachment:fixed ;
-}
-.about::before {
-  content: "";
-  position: absolute;
-  top: 0;
-  left: 0;
-  width: 100%;
-  height: 100%;
-  background: rgba(0, 0, 0, 0.45); /* <-- overlay color + opacity */
-  z-index: 1;
-  pointer-events: none; /* ensures overlay doesn't block buttons/links */
 }
 .contact-form {
 	width: 100%;
@@ -306,6 +273,7 @@ a.btn-one.style2.tra {
     top: 9.1%;
     position: absolute;
     right: 19%;
+	width: max-content;
 }
 /* .flex-slide.home {
     border-right: 2px solid red!important;
@@ -335,7 +303,7 @@ a.btn-one.style2.tra {
 		display: none;
 	}
 	section.mobileslider {
-		height: 288px;
+		height: 168px;
 		background-size: contain;
 		position: relative;
 	}
